<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_sss_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/dialog_sss_content"
        android:layout_alignLeft="@id/dialog_sss_content"
        android:layout_alignRight="@id/dialog_sss_content"
        android:layout_alignTop="@+id/dialog_sss_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg_bubble_popup" />

    <RelativeLayout
        android:id="@+id/dialog_sss_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/sss_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/songpanel_settings"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sss_dialog_title"
            android:layout_margin="16dp">

            <CheckBox
                android:id="@+id/cb_sf_sps_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:checked="true"
                android:text="@string/sf_sps_expand"
                android:textColor="?attr/primary_theme_color" />

            <CheckBox
                android:id="@+id/cb_sf_sps_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_sf_sps_expand"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/sf_sps_close"
                android:textColor="?attr/primary_theme_color" />

            <Button
                android:id="@+id/btn_dialog_sss_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_sf_sps_close"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/close" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>