<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_atp_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/bg_bubble_popup"
        android:scaleType="fitXY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignTop="@+id/dialog_da_content"
        android:layout_alignBottom="@id/dialog_da_content"
        android:layout_alignLeft="@id/dialog_da_content"
        android:layout_alignRight="@id/dialog_da_content" />

    <RelativeLayout
        android:id="@+id/dialog_da_content"
        android:layout_width="wrap_content"
        android:paddingRight="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/playlist_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/download_album_art"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playlist_dialog_title"
            android:layout_margin="16dp">

            <CheckBox
                android:id="@+id/cb_skip_existing_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginRight="4dp"
                android:text="@string/download_ex_aa"
                android:textColor="?attr/primary_theme_color" />

            <TextView
                android:id="@+id/tv_aa_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_skip_existing_album"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/download_aa_size"
                android:textColor="?attr/primary_theme_color" />

            <Spinner
                android:id="@+id/download_aa_size_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_aa_size"
                android:layout_alignStart="@+id/tv_aa_size"
                android:layout_below="@+id/tv_aa_size"
                android:layout_marginTop="4dp"
                android:entries="@array/albumart_size_array"
                android:prompt="@string/download_aa_size"
                android:spinnerMode="dialog" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:id="@+id/btn_dialog_da_download"
                android:layout_below="@id/download_aa_size_spinner"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>