<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/settings_toolbar"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/settings_interface_scrollview_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/g_si_general_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:elevation="4dp"
            android:orientation="vertical">

            <LinearLayout xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="4dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/si_general_settings"
                        android:textColor="?attr/primary_theme_color"
                        android:textStyle="bold" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/si_background_colors_item"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="?attr/ripple_background_rect"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/tv_si_fragment_colors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_background_color"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_si_fragment_colors"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_background_color_desc"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/secondary_text_color" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/si_spp_colors_item"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="?attr/ripple_background_rect"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/tv_si_spp_colors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_spp_color"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_si_spp_colors"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_spp_color_desc"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/secondary_text_color" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="4dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/si_lastfm_albumart"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="?attr/ripple_background_rect"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/tv_si_lastfmalbumart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_lastfm_album"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_si_lastfmalbumart"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_lastfm_album_desc"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="12sp" />
                    </RelativeLayout>

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/g_si_songpanel_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:elevation="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/si_songpanel_colors"
                    android:textColor="?attr/primary_theme_color"
                    android:textStyle="bold" />
            </RelativeLayout>


            <LinearLayout xmlns:card="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="4dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/si_seekbar_c_item"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="?attr/ripple_background_rect"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/tv_si_seekbar_c"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_seekbar_c"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_si_seekbar_c"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/si_seekbar_c_desc"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/si_seekbar_c_preview"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/outline_black"
                        android:padding="1dp"
                        android:src="@drawable/color_preview" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/secondary_text_color" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>