<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/settings_toolbar"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/settings_functionality_scrollview_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:card="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/sf_b_playonskip"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?attr/ripple_background_rect"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/relativeLayout">

                    <TextView
                        android:id="@+id/tv_sf_playonskip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/sf_b_playonskip"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_sf_playonskip"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/sf_b_playonskip_desc"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="12sp" />
                </RelativeLayout>

                <CheckBox
                    android:id="@+id/sf_b_playonskip_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="1dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/secondary_text_color" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout xmlns:card="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/sf_songpanelsettings"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?attr/ripple_background_rect"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/relativeLayout2">

                    <TextView
                        android:id="@+id/tv_sf_songpanelsettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/sf_songpanelsettings"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_sf_songpanelsettings"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/sf_songpanelsettings_desc"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="12sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/secondary_text_color" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>